--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcc 'F1001'
 - !lcsh 'Red River Settlement'
 - !lcsh 'Manitoba -- History'
+- GITenberg
 title: 'The Red River Colony
 
   A Chronicle of the Beginnings of Manitoba'
